@@ -5,3 +5,4 @@ tsconfig.json
 tslint.json
 src/
 release/
+rfconfig.json
