@@ -11,7 +11,10 @@ function get() {
     let line = '';
     for (let i = 0; i < fileContents.length; i++) {
         if (fileContents[i] === '\n') {
-            data[data.length] = line.trim();
+            config.data.changelog.ignore.forEach((x) => {
+                if (x !== line.trim())
+                    data[data.length] = line.trim();
+            });
             line = '';
             continue;
         }
