@@ -22,9 +22,6 @@ function load() {
         return;
     }
     exports.data = json.readFileSync(exports.path);
-    // TODO
-    // assuming the package data is in json... at the moment
-    // add statement to check file extension and parse xml as well
     if (exports.data.package) {
         if (exports.data.package.endsWith('package.json')) {
             exports.type = 'node';
