@@ -4,9 +4,6 @@ const config = require("./config");
 const shell = require("child_process");
 const colors = require("colors");
 function release() {
-    // TODO
-    // add config option for exec path
-    // and build command
     shell.exec(config.data.exec, (error, stdout, stderr) => {
         if (error) {
             console.error(colors.red(`ERROR: could not build application executable: ${error}`));
