@@ -13,7 +13,7 @@
 		"start": "node lib/app.js",
 		"build": "tsc && npm run tslint",
 		"tslint": "tslint -c tslint.json -p tsconfig.json",
-		"test": "node lib/app.js -ldse"
+		"test": "node lib/app.js -ldsc rfconfig-test.json"
 	},
 	"dependencies": {
 		"archiver": "^2.1.1",
