@@ -1,3 +1,8 @@
+(#10)[3/21/2018-11:21 1.1.0 Sergix]
+	Added "ignore" property for "changelog" in rfconfig.
+	Changed "compression" property to array.
+	Fixed template.json issue.
+
 (#9)[3/21/2018-10:27 1.0.1 Sergix]
 	Fixed dependency listing in package.json.
 	Fixed application not running from global as cli.
